--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -9,6 +9,19 @@ ion-menu.md ion-content {
   --padding-top: 20px;
   --padding-bottom: 20px;
 }
+.custom-item {
+  display: flex;
+  align-items: center;
+}
+
+
+.custom-img {
+  width: 50px; /* Ajusta el tamaño según tus necesidades */
+  height: 50px;
+  margin-right: 10px; /* Espacio entre la imagen y el texto */
+}
+
+
 
 ion-menu.md ion-list {
   padding: 20px 0;
@@ -22,9 +35,7 @@ ion-menu.md ion-list-header, ion-menu.md ion-note {
   padding-left: 10px;
 }
 
-ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
-}
+
 
 ion-menu.md ion-list#inbox-list ion-list-header {
   font-size: 22px;
@@ -42,7 +53,7 @@ ion-menu.md ion-list#labels-list ion-list-header {
 ion-menu.md ion-item {
   --padding-start: 10px;
   --padding-end: 10px;
-  border-radius: 4px;
+  
 }
 
 ion-menu.md ion-item.selected {
